.kubernetes/postgres.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "postgresdb"
  labels:
    app: "postgresdb"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "postgresdb"
  template:
    metadata:
      labels:
        app: "postgresdb"
    spec:
      containers:
      - name: "postgresdb"
        image: "postgres:12.1-alpine"
        volumeMounts:
          - mountPath: "/var/lib/postgresql"
            name: postgresdb-data
      volumes:
      - name: postgresdb-data
        persistentVolumeClaim:
          claimName: postgresdb-data
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "postgresdb-service"
  namespace: "default"
  labels:
    app: "postgresdb"
spec:
  ports:
  - protocol: "TCP"
    port: 5432
    targetPort: 5432
  selector:
    app: "postgresdb"
  type: "ClusterIP"
