.kubernetes/backend.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "microblog-backend"
  namespace: "default"
  labels:
    app: "microblog-backend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "microblog-backend"
  template:
    metadata:
      labels:
        app: "microblog-backend"
    spec:
      containers:
      - name: "microblog-backend"
        image: REPLACE_IMAGE
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "microblog-backend-service"
  namespace: "default"
  labels:
    app: "microblog-backend"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8000
  selector:
    app: "microblog-backend"
  type: "ClusterIP"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: REPLACE_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: microblog-backend-service
          servicePort: 80
